# puzzlemaker_ce

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS.md  README.md
.github/workflows/: build.yml
res/: logo.qrc  logo_alt.qrc  res.qrc
res/shaders/: chamber.frag  chamber.vert
src/: CMakeLists.txt  Main.cpp  Window.cpp  Window.h
src/config/: Config.h  Config.h.in  Options.cpp  Options.h
src/core/: Main.cpp  Window.cpp  Window.h
src/dialogs/: NewUpdateDialog.cpp
src/editor/: Editor.cpp  Editor.h  Octree.h  Vector.h  World.h
test/: CMakeLists.txt  Octree.cpp
